Jan 25, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- Halflife2 support (untested)

Jan 21, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- highly experimental: optionally use DT_AUXILIARY stub libraries to not depend
  on libGeoIP and libgdk_pixbuf at runtime

Jan 12, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- split get_new_defaults into game specific functions
- fix doom3 protocol detection (#1092165)

Jan 11, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix crashes due to wrong return type of callbacks (#1098910, patch by Jochen
  Baier)
- fix q1/qw/q2 skin list update

Dec 23, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- don't try to scan home directories for maps if the directory
  doesn't exist (reported by Steffen Pankratz)

Dec 22, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- prepare for 1.0.2
- set TF_U2_NAMES qstat flag for armyops
- require qstat 2.7

Dec 19, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- manpage corrections
- add Netpanzer master

Nov 26, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add gslist master for UT, remove Epic one
- updates for 1.0.1

Nov 22, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- update German translation because of typo
- set window type of splash screen in gtk2 version

Nov 22, 2004: Jordi Mallach <jordi@sindominio.net>
- fix typo: Soure -> Source
- Update Catalan and Spanish translations

Nov 21, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- fix compatability issues with gcc 2.95
- remove unneeded tray icon animation frames

Nov 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Use non-blocking socket for rcon
- Add small timeout to catch replies with multiple packets in xqf-rcon
- Make xqf-recon optionally read the rcon passwort from the environment
  variable XQF_RCON_PASSWORD
- Honor osmask of Doom3 servers and check for Linux support
  (suggested by TTimo)
- update German translation

Nov 13, 2004: Ludwig Nussel <l-n@users.sourceforge.net>