@@ -1,3 +1,7 @@
+Jan 30, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- remove quakeforge specials
+- remove no longer needed ssam notes
+
 Jan 25, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - Halflife2 support (untested)
 
